; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_onion_client.c_cmp_entry.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_onion_client.c_cmp_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@ONION_NODE_TIMEOUT = common dso_local global i32 0, align 4
@cmp_public_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_entry(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__, align 4
  %7 = alloca %struct.TYPE_3__, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @memcpy(%struct.TYPE_3__* %6, i8* %11, i32 8)
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @memcpy(%struct.TYPE_3__* %7, i8* %13, i32 8)
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @ONION_NODE_TIMEOUT, align 4
  %18 = call i32 @is_timeout(i32 %16, i32 %17)
  store i32 %18, i32* %8, align 4
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @ONION_NODE_TIMEOUT, align 4
  %22 = call i32 @is_timeout(i32 %20, i32 %21)
  store i32 %22, i32* %9, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %2
  %26 = load i32, i32* %9, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %25
  store i32 0, i32* %3, align 4
  br label %52

29:                                               ; preds = %25, %2
  %30 = load i32, i32* %8, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %29
  store i32 -1, i32* %3, align 4
  br label %52

33:                                               ; preds = %29
  %34 = load i32, i32* %9, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %33
  store i32 1, i32* %3, align 4
  br label %52

37:                                               ; preds = %33
  %38 = load i32, i32* @cmp_public_key, align 4
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @id_closest(i32 %38, i32 %40, i32 %42)
  store i32 %43, i32* %10, align 4
  %44 = load i32, i32* %10, align 4
  %45 = icmp eq i32 %44, 1
  br i1 %45, label %46, label %47

46:                                               ; preds = %37
  store i32 1, i32* %3, align 4
  br label %52

47:                                               ; preds = %37
  %48 = load i32, i32* %10, align 4
  %49 = icmp eq i32 %48, 2
  br i1 %49, label %50, label %51

50:                                               ; preds = %47
  store i32 -1, i32* %3, align 4
  br label %52

51:                                               ; preds = %47
  store i32 0, i32* %3, align 4
  br label %52

52:                                               ; preds = %51, %50, %46, %36, %32, %28
  %53 = load i32, i32* %3, align 4
  ret i32 %53
}

declare dso_local i32 @memcpy(%struct.TYPE_3__*, i8*, i32) #1

declare dso_local i32 @is_timeout(i32, i32) #1

declare dso_local i32 @id_closest(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
